k3s-aws/manifests/registry_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry
        - name: htpasswd
          mountPath: /auth
          readOnly: true
      volumes:
      - name: storage
        emptyDir: {} # FIXME -make this more permanent later
      - name: htpasswd
        secret:
          secretName: docker-registry-htpasswd
